    - Add setting to enable/disable the usage of 'Module Inserter'. If 'Module Inserter' is not installed, the setting is hidden. It's enabled by default.  
---------------------------------------------------------------------------------------------------
Version: 0.1.6
Date: 2020-05-04
  Fixes:
    - Check if setting to interface with Module Inserter exists.
---------------------------------------------------------------------------------------------------
Version: 0.1.7
Date: 2020-08-29
  Fixes:
    - Disabled shortcut now has a P.U.M.P. icon instead of a blueprint icon.
    - Added values for item name and sorting.
---------------------------------------------------------------------------------------------------
Version: 0.1.8
Date: 2020-08-31
  Fixes:
    - Fix issue where a tunnel could be planned 1 too long, resulting in the exit of the pump meeting with the side of an underground pipe.
    - Fix out-of-bounds obstruction checking, leading to crash.
---------------------------------------------------------------------------------------------------
Version: 0.1.9
Date: 2020-09-16
  Features:
    - Added menu to select miner for the resource you've selected. 
    - The menu remembers the selection that was made and won't show until new options are available.
    - The menu won't show if there's only 1 option available.
    - The menu can be forcefully shown, regardless of above conditions, using the alternative selection. This is activated with the same keybinding as 'Select for cancel deconstruction', default=Shift+LeftMouse.
---------------------------------------------------------------------------------------------------
Version: 0.1.10
Date: 2020-09-19
  Fixes:
    - Fixed issue where tunnel would not always be placed for 2 parallel pipes without space in between.    
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: ?
  Features:
    - Compatibility for Factorio 1.1